Fix #12819: 14.0.7 Datatable remove legacy CSS border-collapse

--- a/primefaces/src/main/resources/META-INF/resources/primefaces/datatable/datatable.css
+++ b/primefaces/src/main/resources/META-INF/resources/primefaces/datatable/datatable.css
@@ -1,5 +1,4 @@
 .ui-datatable table {
-	border-collapse:collapse;
     width: 100%;
     table-layout: fixed;
 }
